# rust-travel-advisor-

./: Cargo.toml  config.json  id_rsa  id_rsa.pub
migrations/2023-01-11-105805_add_timestamps/: up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/api/: airport.rs  auth.rs  city.rs  dtos.rs  hello.rs  mod.rs  users.rs  validations.rs
src/model/: airport.rs  city.rs  comment.rs  mod.rs  user.rs
src/services/: auth.rs  mod.rs
src/storage/: airport.rs  city.rs  init.rs  mod.rs  user.rs
src/util/: errors.rs  mod.rs
