[package]
name = "travel-advisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = {version = "2.0.0", default-features = false, features = ["mysql"]}
# dotenv = "0.15.0"
# jsonwebtoken = "8.1.1"
serde = {version = "1.0.144", features = ["derive"]}
# serde_json = "1.0.85"
