[package]
name = "travel_advisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
# actix-multipart = "0.4.0"
# diesel = {version = "2.0.0", default-features = false, features = ["mysql"]}
# dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-actix-rustls"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
digest = "0.10.6"
md5 = "0.7.0"
